[package]
name = "garage_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.1"
openssl = { version = "0.10", features = ["vendored"] }
ctrlc = "3.2.3"
#chrono = "0.4.22"
#serde_json = "1.0.85"
#serde = "1.0.145"
