[package]
name = "garage_controller"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.1"
openssl = { version = "0.10", features = ["vendored"] }
ctrlc = "3.2.3"
rppal = "0.13.1"
nix = "0.25.0"
log = "0.4.0"
env_logger = "0.9.1"

